--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>informativo educação no campo</title>
-<link rel="stylesheet" href="style.css                 ">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
 <h1>informativo educação no campo</h1>
-
     </header>
+
+    ><section>
+        <img src="imagem ed. no campo.jpg" alt="primeira imagem">
+    </section>
 </body>
 </html>
