--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>informativo educação no campo</h1>
     </header>
 
-    ><section>
+    >trabalho dos alunos <section>
         <img src="imagem ed. no campo.jpg" alt="primeira imagem">
     </section>
 </body>
