--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <header>
 <h1>informativo educação no campo</h1>
     </header>
-
-    >trabalho dos alunos Djovana Silveira e João nascimento <section>
-        <img src="imagem ed. no campo.jpg" alt="primeira imagem">
+<section>
+    <h2>trabalho dos alunos Djovana Silveira e João nascimento</h2>
+    
+        <img src="imagem ed. no campo.jpg" alt="imagem sala de aula">
     </section>
 </body>
 </html>
