--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>informativo educação no campo</title>
+    <title>IMFORMATIVO EDUCAÇÃO NO CAMPO</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <h1>informativo educação no campo</h1>
     </header>
 <section>
-    <h2>trabalho dos alunos Djovana Silveira e João nascimento</h2>
+    <h2>Trabalho dos alunos: Djovana Silveira e João nascimento</h2>
     
         <img src="imagem ed. no campo.jpg" alt="imagem sala de aula">
     </section>
