--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMFORMATIVO EDUCAÇÃO NO CAMPO</title>
+    <title>informativo educação no campo</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-<h1>informativo educação no campo</h1>
+<h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
+<a hef="#">djovana gosta de peixe</a>
     </header>
 <section>
     <h2>Trabalho dos alunos: Djovana Silveira e João nascimento</h2>
