--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
 <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
-<a hef="#">djovana gosta de peixe</a>
+<a hef="abacaxi"
     </header>
 <section>
-    <h2>Trabalho dos alunos: Djovana Silveira e João nascimento</h2>
+    <h2>Trabalho dos alunos: Djovana Silveira e João Nascimento</h2>
     
         <img src="imagem ed. no campo.jpg" alt="imagem sala de aula">
     </section>
