--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
 <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
-<a hef="abacaxi"
+<a hef="#">djovana gosta de abacaxi</a>
     </header>
 <section>
     <h2>Trabalho dos alunos: Djovana Silveira e João Nascimento</h2>
