--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 <section>
     <h2>Trabalho dos alunos: Djovana Silveira e João Nascimento</h2>
-    
+    <p>somos dois estudantes lindos</p>
         <img src="imagem ed. no campo.jpg" alt="imagem sala de aula">
     </section>
 </body>
