--- a/index.html
+++ b/index.html
@@ -18,3 +18,54 @@
     </section>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Universidade XYZ</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Arquivo de estilo CSS externo -->
+</head>
+<body>
+    <header>
+        <h1>Universidade XYZ</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="destaque">
+            <h2>Bem-vindo à Universidade XYZ</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur lorem sed orci efficitur, nec dictum enim sodales.</p>
+        </section>
+
+        <section id="cursos">
+            <h2>Nossos Cursos</h2>
+            <ul>
+                <li><a href="curso1.html">Curso 1</a></li>
+                <li><a href="curso2.html">Curso 2</a></li>
+                <li><a href="curso3.html">Curso 3</a></li>
+            </ul>
+        </section>
+
+        <section id="contato">
+            <h2>Entre em Contato</h2>
+            <p>Para mais informações, entre em contato conosco:</p>
+            <address>
+                Email: <a href="mailto:contato@universidade.com">contato@universidade.com</a><br>
+                Telefone: (XX) XXXX-XXXX<br>
+                Endereço: Av. Universitária, 123 - Cidade Universitária, CEP 12345-678
+            </address>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Universidade XYZ. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
