--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
     <main>
         <section id="destaque">
-            <h2>Bem-vindo à Universidade XYZ</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur lorem sed orci efficitur, nec dictum enim sodales.</p>
+            <h2>BEM VINDO AO INFORMATIVO EDUCAÇÃO NO CAMPO</h2>
+            <p> ESTAMOS FELEZES EM TE VER POR AKI</p>.</p>
         </section>
 
         <section id="cursos">
