--- a/index.html
+++ b/index.html
@@ -9,26 +9,15 @@
 <body>
     <header>
 <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
-<a hef="Djovana">Djovana gosta de abacaxi</a>
     </header>
 <section>
     <h2>Trabalho dos alunos: Djovana Silveira e João Nascimento</h2>
     <p>somos dois estudantes lindos</p>
         <img src="imagem ed. no campo.jpg" alt="imagem sala de aula">
     </section>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universidade XYZ</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Arquivo de estilo CSS externo -->
-</head>
 <body>
     <header>
-        <h1>Universidade XYZ</h1>
+        <h1>djovana e joao</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
