--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-<h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
+<h1>BEM VINDO AO INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
     </header>
 <section>
-    <h2>Trabalho dos alunos: Djovana Silveira e João Nascimento</h2>
+
     <p>somos dois estudantes lindos</p>
     </section>
 <body>
     <header>
-        <h1>djovana e joao</h1>
+        <h1>Djovana e joao</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
@@ -28,7 +28,7 @@
 
     <main>
         <section id="destaque">
-            <h2>BEM VINDO AO INFORMATIVO EDUCAÇÃO NO CAMPO</h2>
+            <h2>INFORMATIVO EDUCAÇÃO NO CAMPO</h2>
             <p> ESTAMOS FELEZES EM TE VER POR AKI</p>.</p>
             <img src="imagem ed. no campo.jpg" alt="imagem sala de aula">
         </section>
