--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 
     <main>
         <section id="destaque">
+            
+    <p>somos dois estudantes lindos</p>
+</section>
+<body>
+<header>
+    <h1>Djovana e joao</h1>
             <h2>INFORMATIVO EDUCAÇÃO NO CAMPO</h2>
             <p> ESTAMOS FELEZES EM TE VER POR AKI</p>.</p>
             <img src="imagem ed. no campo.jpg" alt="imagem sala de aula">
