--- a/index.html
+++ b/index.html
@@ -64,3 +64,33 @@
     </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carrossel HTML e CSS</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<div class="carousel">
+    <div class="carousel-inner">
+        <div class="slide active">
+            <img src="imagem1.jpg" alt="Imagem 1">
+        </div>
+        <div class="slide">
+            <img src="imagem2.jpg" alt="Imagem 2">
+        </div>
+        <div class="slide">
+            <img src="imagem3.jpg" alt="Imagem 3">
+        </div>
+    </div>
+    
+    <button class="prev">&larr;</button>
+    <button class="next">&rarr;</button>
+</div>
+
+<script src="scripts.js"></script>
+</body>
+</html>
