--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2>Entre em Contato</h2>
             <p>Para mais informações, entre em contato conosco:</p>
             <address>
-                Email: <a href="mailto:contato@universidade.com">contato@universidade.com</a><br>
+                Email: <a href="djovana.pereira@escola.pr.gov.br">contato@universidade.com</a><br>
                 Telefone: (XX) XXXX-XXXX<br>
                 Endereço: Av. Universitária, 123 - Cidade Universitária, CEP 12345-678
             </address>
@@ -62,35 +62,5 @@
     <footer>
         <p>&copy; 2024 Universidade XYZ. Todos os direitos reservados.</p>
     </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrossel HTML e CSS</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-<div class="carousel">
-    <div class="carousel-inner">
-        <div class="slide active">
-            <img src="imagem1.jpg" alt="Imagem 1">
-        </div>
-        <div class="slide">
-            <img src="imagem2.jpg" alt="Imagem 2">
-        </div>
-        <div class="slide">
-            <img src="imagem3.jpg" alt="Imagem 3">
-        </div>
-    </div>
-    
-    <button class="prev">&larr;</button>
-    <button class="next">&rarr;</button>
-</div>
-
-<script src="scripts.js"></script>
 </body>
 </html>
