--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Universidade XYZ. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Colégio Estadual do Paraná.</p>
     </footer>
 </body>
 </html>
