--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2>Entre em Contato</h2>
             <p>Para mais informações, entre em contato conosco:</p>
             <address>
-                Email: <a href="djovana.pereira@escola.pr.gov.br">contato@universidade.com</a><br>
+                Email: <a href="djovana.pereira@escola.pr.gov.br">djovana.pereira@escola.pr.gov.br</a><br>
                 Telefone: (XX) XXXX-XXXX<br>
                 Endereço: Av. Universitária, 123 - Cidade Universitária, CEP 12345-678
             </address>
