--- a/index.html
+++ b/index.html
@@ -74,13 +74,10 @@
 <div class="carousel">
     <div class="carousel-inner">
         <div class="slide active">
-            <img src="imagem1.jpg" alt="Imagem 1">
+            <img src="imagem campo mochila.webp" alt="Imagem 1">
         </div>
         <div class="slide">
-            <img src="imagem2.jpg" alt="Imagem 2">
-        </div>
-        <div class="slide">
-            <img src="imagem3.jpg" alt="Imagem 3">
+            <img src="imagem ed. no campo.jpg" alt="Imagem 2">
         </div>
     </div>
     
