--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-<h1>BEM VINDO AO INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
+<h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
     </header>
 <section>
 
-    <p>somos dois estudantes lindos</p>
+    <p>.......................................................................................</p>
     </section>
 <body>
     <header>
@@ -29,7 +29,7 @@
     <main>
         <section id="destaque">
             
-    <p>somos dois estudantes lindos</p>
+    <p>.....................................................................................</p>
         </section>
 <body>
 <header>
