--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="slide active">
-                    <img src="imagem campo mochila.webp" alt="Imagem 1">
+                    <img src="imagem escola.jpeg" alt="Imagem 1">
                 </div>
                 <div class="slide">
-                    <img src="imagem ed. no campo.jpg" alt="Imagem 2">
+                    <img src="imagem campo mochila.webp" alt="Imagem 2">
+                </div>
+                <div class="slide">
+                    <img src="imagem ed. no campo.jpg" alt="Imagem 3">
                 </div>
             </div>
             
