--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     </section>
 <body>
     <header>
-        <h1>Djovana e joao</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="informativo.html">Cursos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -33,7 +32,6 @@
         </section>
 <body>
 <header>
-    <h1>Djovana e joao</h1>
             <h2>INFORMATIVO EDUCAÇÃO NO CAMPO</h2>
             <p> ESTAMOS FELEZES EM TE VER POR AKI</p>.</p>
         </footer>
