--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <body>
 <header>
             <h2>INFORMATIVO EDUCAÇÃO NO CAMPO</h2>
-            <p> ESTAMOS FELEZES EM TE VER POR AKI</p>.</p>
+
+            <p> você sbae como funciona a educação no campo ?</p>.</p>
         </footer>
         <html lang="pt-br">
         <head>
