--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <body>
 <header>
             <h2>INFORMATIVO EDUCAÇÃO NO CAMPO</h2>
-
-            <p> você sbae como funciona a educação no campo ?</p>.</p>
+<p>.</p>
+            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</p>.</p>
         </footer>
         <html lang="pt-br">
         <head>
