--- a/index.html
+++ b/index.html
@@ -110,3 +110,45 @@
 <script src="scripts.js"></script>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Exemplo</title>
+    <style>
+        /* Estilos opcionais para o menu */
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #f1f1f1;
+            overflow: hidden;
+        }
+        li {
+            float: left;
+        }
+        li a {
+            display: block;
+            color: #333;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        li a:hover {
+            background-color: #ddd;
+        }
+    </style>
+</head>
+<body>
+
+<ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#news">Notícias</a></li>
+    <li><a href="#contact">Contato</a></li>
+    <li><a href="#about">Sobre</a></li>
+</ul>
+
+</body>
+</html>
