--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 <script src="scripts.js"></script>
 </body>
 </html>
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -122,7 +123,7 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
-            background-color: #f1f1f1;
+            background-color:#FBE8C5;
             overflow: hidden;
         }
         li {
