--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <p>.</p>
-    <p>.</p>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>informativo educação no campo</title>
@@ -116,7 +114,7 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
-            background-color:#FBE8C5;
+            background-color:#BB6222;
             overflow: hidden;
         }
         li {
