--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         <script src="scripts.js"></script>
         <section id="cursos">
-            <h2>Nossos Cursos</h2>
+            <h2>VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</h2>
             <ul>
                 <li><a href="curso1.html">Curso 1</a></li>
                 <li><a href="curso2.html">Curso 2</a></li>
