--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
             <P>.</P>
             <h2>VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</h2>
             <ul>
-                <li><a href="curso1.html">Curso 1</a></li>
-                <li><a href="curso2.html">Curso 2</a></li>
-                <li><a href="curso3.html">Curso 3</a></li>
+                <li><a href="EDUCAÇAO">VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO? </a></li>
+                
             </ul>
         </section>
 
