--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
         li {
             float: left;
         }
+        li a {
+            display: block;
+            color: #333;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        li a:hover {
+            background-color: #ddd;
+        }
     </style>
 </head>
 <body>
