--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+            top:50%
         }
         li a:hover {
             background-color: #ddd;
