--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="informativo.html">Cursos</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="informativo.html">informativo</a></li>
+                <li><a href="contato.html">alunos</a></li>
             </ul>
         </nav>
     </header>
