--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Início</a></li>
                 <li><a href="informativo.html">informativo</a></li>
                 <li><a href="contato.html">alunos</a></li>
+                <li><a href="curiosidades.html">curiosidades</a></li>
             </ul>
         </nav>
     </header>
