--- a/index.html
+++ b/index.html
@@ -112,4 +112,8 @@
     </style>
 </head>
 <body>
-   
+   <div class="imgagem"
+   <img src="criança no sol.jpg"
+   <img src="educação criancas.jpg"
+   </div>
+
