--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
     </style>
 </head>
 <body>
-   <div class="imgagem"
+   <div class="imagem"
    <img src="criança no sol.jpg"
    <img src="educação criancas.jpg"
    </div>
+</head>
+<body>
 
