--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             list-style-type: none;
             margin: 0;
             padding: 0;
-            background-color:#BB6222;
+            background-color:#702C16;
             overflow: hidden;
         }
         li {
