--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }
         li a {
             display: block;
-            color: #333;
+            color: #FBE8C5;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
