--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="slide active">
-                    <img src="imagem ed. no campo.jpg" alt="Imagem 1">
+                    <img src="./img/criança no sol.jpg" alt="Imagem 1">
                 </div>
                 <div class="slide">
-                    <img src="imagem campo mochila.webp" alt="Imagem 2">
+                    <img src="./img/imagem campo mochila.webp" alt="Imagem 2">
                 </div>
                 <div class="slide">
-                    <img src="imagem escola.jpeg" alt="Imagem 3">
+                    <img src="./img/escola no campo.jpg" alt="Imagem 3">
                 </div>
             </div>
             
