--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <div class="carousel">
             <div class="carousel-inner">
-                <div class="slide active">
+                <div class="slide">
                     <img src="./img/criança no sol.jpg" alt="Imagem 1">
                 </div>
                 <div class="slide">
