--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <button class="next">&rarr;</button>
         </div>
         
-        <script src="scripts.js"></script>
+        <script src="./js/movimento.js"></script>
         <section id="cursos">
             <P>.</P>
             <h2>VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</h2>
@@ -76,7 +76,7 @@
 <html lang="pt-br">
 <head>
 
-<script src="scripts.js"></script>
+<script src="./js/movimento.js"></script>
 </body>
 </html>
 
