--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Carrossel HTML e CSS</title>
-            <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="estilo.css">
         </head>
         <body>
         
