--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <img src="./img/escola no campo.jpg" alt="Imagem 3">
                 </div>
             </div>
-            
+            <!--
             <button class="prev">&larr;</button>
-            <button class="next">&rarr;</button>
+            <button class="next">&rarr;</button>-->
         </div>
         
         <script src="./js/movimento.js"></script>
