--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>informativo educação no campos</title>
+    <title>informativo educação no campo</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
+<header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="informativo.html">informativo</a></li>
+            <li><a href="contato.html">alunos</a></li>
+            <li><a href="curiosidades.html">curiosidades</a></li>
+        </ul>
+    </nav>
+</header>
+
 <body>
-    </section>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="TESTE.HTML">informativo</a></li>
-                <li><a href="contato.html">alunos</a></li>
-                <li><a href="curiosidades.html">curiosidades</a></li>
-            </ul>
-        </nav>
-    </header>
 
     <main>
         <section id="destaque">
@@ -35,7 +35,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Carrossel HTML e CSS</title>
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="styles.css">
         </head>
         <body>
         
@@ -51,11 +51,7 @@
                     <img src="./img/escola no campo.jpg" alt="Imagem 3">
                 </div>
             </div>
-<<<<<<< HEAD
            <!--
-=======
-            <!--
->>>>>>> 19dd92940e4dd755bbfafffb12f560a528537736
             <button class="prev">&larr;</button>
             <button class="next">&rarr;</button>-->
         </div>
