--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -27,8 +27,8 @@
             <p>.</p>
             <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</p>.</p>
         </header>
-
         <body>
+        
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="slide">
@@ -41,6 +41,9 @@
                     <img src="./img/escola no campo.jpg" alt="Imagem 3">
                 </div>
             </div>
+           <!--
+            <button class="prev">&larr;</button>
+            <button class="next">&rarr;</button>-->
         </div>
         
         <script src="./js/movimento.js"></script>
@@ -60,6 +63,10 @@
             </address>
         </section>
     </main>
+<html lang="pt-br">
+<head>
+
+
 </body>
 </html>
 
