--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -26,7 +26,7 @@
             <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
             <p>.</p>
             <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</p>.</p>
-        </header>
+        <html lang="pt-br">
         <body>
         
         <div class="carousel">
@@ -70,3 +70,42 @@
 </body>
 </html>
 
+<!--<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Exemplo</title>
+    <style>
+        /* Estilos opcionais para o menu */
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color:#702C16;
+            overflow: hidden;
+        }
+        li {
+            float: left;
+        }
+        li a {
+            display: block;
+            color: #FBE8C5;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            top:50%
+        }
+        li a:hover {
+            background-color: #ddd;
+        }
+    </style>
+</head>
+<body>
+   <div class="imagem"
+   <img src="criança no sol.jpg"
+   <img src="educação criancas.jpg"
+   </div>
+</head>
+<body>
+-->
