--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -26,7 +26,6 @@
             <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
             <p>.</p>
             <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</p>.</p>
-        <html lang="pt-br">
         <body>
         
         <div class="carousel">
@@ -62,8 +61,7 @@
                 Endereço: Av. Universitária, 123 - Cidade Universitária, CEP 12345-678
             </address>
         </section>
-    </main>
-<html lang="pt-br">
+    </main>;
 <head>
 
 
