--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -62,7 +62,7 @@
                 Endereço: Av. Universitária, 123 - Cidade Universitária, CEP 12345-678
             </address>
         </section>
-    </main>;
+    </main>
 
 
 
