--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -26,7 +26,7 @@
             <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
             <p>.</p>
             <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</p>.</p>
-        <body>
+        </header>
         
         <div class="carousel">
             <div class="carousel-inner">
@@ -63,9 +63,6 @@
             </address>
         </section>
     </main>
-
-
-
 </body>
 </html>
 
