--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <button class="prev">&larr;</button>
-            <button class="next">&rarr;</button>-->
+            <button class="next">&rarr;</button>
         </div>
         
         <script src="./js/movimento.js"></script>
