--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 <header>
             <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
-            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</p>.</p>
+            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?<p>
         </footer>
         <html lang="pt-br">
         <head>
