--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>informativo educação no campos</title>
+    <title>informativo educação no campo</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    </section>
 <body>
     <header>
         <nav>
@@ -21,9 +19,7 @@
     </header>
 
     <main>
-        <section id="destaque">
-            
-        </section>
+        <section id="destaque"></section>
 <body>
 <header>
             <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
