--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <img src="./img/criança no sol.jpg" alt="Imagem 1">
                 </div>
                 <div class="slide">
-                    <img src="./img/imagem campo mochila.webp" alt="Imagem 2">
+                    <img src="./img/imagem ed. no campo.jpg" alt="Imagem 2">
                 </div>
                 <div class="slide">
-                    <img src="./img/escola no campo.jpg" alt="Imagem 3">
+                    <img src="./img/imagem escola.jpeg" alt="Imagem 3">
                 </div>
             </div>
             <button class="prev">&larr;</button>
