--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>informativo educação no campo</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -20,19 +21,18 @@
 
     <main>
         <section id="destaque"></section>
-<body>
-<header>
+
+        <header>
             <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
+            <p>.</p>
             <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?<p>
-        </footer>
-        <html lang="pt-br">
-        <head>
+
+        <header>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Carrossel HTML e CSS</title>
             <link rel="stylesheet" href="style.css">
-        </head>
-        <body>
+        </header>
         
         <div class="carousel">
             <div class="carousel-inner">
