--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="./img/criança no sol.jpg" alt="Imagem 1">
                 </div>
                 <div class="slide">
-                    <img src=".img/imagem ed. no campo.jpg" alt="Imagem 2">
+                    <img src="img/imagem ed. no campo.jpg" alt="Imagem 2">
                 </div>
                 <div class="slide">
                     <img src="./img/imagem escola.jpeg" alt="Imagem 3">
