--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <img src="img/imagem ed. no campo.jpg" alt="Imagem 2">
                 </div>
                 <div class="slide">
-                    <img src="./img/imagem escola.jpeg" alt="Imagem 3">
+                    <img src="./img/escola no campo.jpg" alt="Imagem 3">
                 </div>
             </div>
 
