--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header>
             <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
             <p>.</p>
-            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?<p>
+            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO? hahaha<p>
          </header>
         
         <div class="carousel">
