--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="cursos">
             <br>
             <P>.</P>
-            <h4>VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</h4>
+            <h4>introdução</h4>
             <P>.</P>
         </section>
         </div>
