--- a/test.html
+++ b/test.html
@@ -23,9 +23,9 @@
         <section id="destaque"></section>
 
         <header>
-            <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
+            <h1>INTEGRANTES</h1>
             <p>.</p>
-            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO?</p>.</p>
+            <p> VOCÊ SABE QUEM NÓS SOMOS?</p>.</p>
         </header>
         
         <div class="subtitui">
