--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
             <div class="carousel">
                 <div class="carousel-inner">
                     <div class="slide">
-                        <img src="./img/criança no sol.jpg" alt="Imagem 1">
+                        <img src="./img/imagem escola.jpeg" alt="Imagem 1">
                     </div>
                     <div class="slide">
                         <img src="./img/imagem campo mochila.webp" alt="Imagem 2">
