--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
             <div class="carousel">
                 <div class="carousel-inner">
                     <div class="slide">
-                        <img src="./img/imagem escola.jpeg" alt="Imagem 1">
+                        <img src="./img/criança no sol.jpg" alt="Imagem 1">
                     </div>
                     <div class="slide">
                         <img src="./img/imagem campo mochila.webp" alt="Imagem 2">
@@ -67,38 +67,6 @@
     </main>
 </body>
 </html>
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apresentação de Integrantes</title>
-    <style>
-        /* Estilos opcionais para melhor apresentação */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-        }
-        .integrante {
-            margin-bottom: 20px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Integrantes do Nosso Grupo</h1>
 
-    <ul>
-        <li class="integrante">
-            <h2>Nome do Integrante 1</h2>
-            <p>Descrição breve sobre o integrante.</p>
-        </li>
-        <li class="integrante">
-            <h2>Nome do Integrante 2</h2>
-            <p>Descrição breve sobre o integrante.</p>
-        </li>
-        <!-- Adicione mais itens conforme necessário -->
-    </ul>
-</body>
-</html>
 
 
