--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="test.html">integrantes</a></li>
+                <li><a href="">integrantes</a></li>
                 <li><a href="contato.html">alunos</a></li>
                 <li><a href="curiosidades.html">curiosidades</a></li>
             </ul>
