--- a/test.html
+++ b/test.html
@@ -20,12 +20,12 @@
 
     <ul>
         <li class="integrante">
-            <h2>Nome do Integrante 1</h2>
-            <p>Descrição breve sobre o integrante.</p>
+            <h2>Djovana Silveira</h2>
+            <p>16 anos, adora amarelo e pretende cursar odontologia </p>
         </li>
         <li class="integrante">
-            <h2>Nome do Integrante 2</h2>
-            <p>Descrição breve sobre o integrante.</p>
+            <h2>João Nascimento</h2>
+            <p>17 anos, joga volei e pretende cursar arquitetura </p>
         </li>
         <!-- Adicione mais itens conforme necessário -->
     </ul>
