--- a/test.html
+++ b/test.html
@@ -16,7 +16,8 @@
     </style>
 </head>
 <body>
-    <h1>Integrantes do Nosso Grupo</h1>
+    <h1>Integrantes do grupo </h1>
+    <h3>quem somos nós?</h3>
 
     <ul>
         <li class="integrante">
