--- a/test.html
+++ b/test.html
@@ -4,18 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentação de Integrantes</title>
-    <style>
-        /* Estilos opcionais para melhor apresentação */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-        }
-        .integrante {
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <img src="perfil.jpg" alt="Minha Foto de Perfil">
+            <h1>Seu Nome</h1>
+            <p>Estudante de Programação na Universidade XYZ</p>
+        </div>
+    </header>
+    
+    <section class="main-content">
+        <div class="container">
+            <h2>Sobre Mim</h2>
+            <p>Coloque aqui uma breve descrição sobre você, seus interesses, objetivos acadêmicos, etc.</p>
+            <h2>Skills</h2>
+            <ul>
+                <li>Linguagens de Programação</li>
+                <li>Ferramentas e Tecnologias</li>
+                <li>Habilidades Interpessoais</li>
+            </ul>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+</body>
+</html>
+
+
+
     <h1>INTEGRANTES DO GRUPO </h1>
     <P>.</P>
     <h3>quem somos nós?</h3>
