--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>informativo educação no campo</title>
+    <title>INTEGRANTES DA EQUIPE</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
