--- a/test.html
+++ b/test.html
@@ -22,9 +22,9 @@
     <main>
         <section id="destaque"></section>
         <header>
-            <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
+            <h1>INTEGRANTES DA EQUIPE</h1>
             <p>.</p>
-            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO? hahaha<p>
+            <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
          </header>
         
         <div class="carousel">
