--- a/test.html
+++ b/test.html
@@ -30,13 +30,13 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="slide">
-                    <img src="./img/criança no sol.jpg" alt="Imagem 1">
+                    <img src="./img/Colegio-Estadual-do-Parana.jpg" alt="Imagem 1">
                 </div>
                 <div class="slide">
-                    <img src="img/imagem ed. no campo.jpg" alt="Imagem 2">
+                    <img src=".." alt="Imagem 2">
                 </div>
                 <div class="slide">
-                    <img src="./img/escola no campo.jpg" alt="Imagem 3">
+                    <img src=".." alt="Imagem 3">
                 </div>
             </div>
 
