--- a/test.html
+++ b/test.html
@@ -27,10 +27,9 @@
             <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
          </header>
         
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="slide">
-                    <img src="./img/Colegio-Estadual-do-Parana.jpg" alt="Imagem 1">
+        <div class="imagem"
+        <img src="./img/Colegio-Estadual-do-Parana"
+            <div class=""
                 </div>
             </div>
 
