--- a/test.html
+++ b/test.html
@@ -28,6 +28,8 @@
     </header>
 
     <main>
+        <img src="img/Colegio-Estadual-do-Parana.jpg" alt="imagem 1">
+        
         <section id="destaque"></section>
         <header>
             <h1>INTEGRANTES DA EQUIPE</h1>
